task15/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-something-service
  namespace: fayoz-final
spec:
  selector:
    app: frontend-something
  ports:
  - port: 80
    targetPort: 80
