task15/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: fayoz-final
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: front-fabsoatov.sts404.uz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-something-service
            port:
              number: 80
